VM warning: increase O_BUFLEN in ostream.hpp -- output truncated occurs with fastdebug VM when printing flags

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: hs25
    • Component/s: hotspot
    • Environment:

      fastdebug

    • b53
    • b02

        As of jdk8-b111 (hs25-b53) we have a regression trying to print the final flags values:

         /java/re/jdk/8/promoted/all/b111/binaries/linux-i586/fastdebug/bin/java -XX:+PrintFlagsFinal -version 2>&1 | more
        [Global flags]
            ccstr AbortVMOnException = Java HotSpot(TM) Server VM warning: increase O_BUFLEN
        in ostream.hpp -- output truncated
        {notproduct}
            ccstr AbortVMOnExceptionMessage = Java HotSpot(TM) Server VM warning: increase O_BUFLEN
        in ostream.hpp -- output truncated
        {notproduct}
            uintx AdaptiveSizeDecrementScaleFactor = 4 Java HotSpot(TM) Server VM warning: increase O_BUFLEN
        in ostream.hpp -- output truncated
        {product}
            uintx AdaptiveSizeMajorGCDecayTimeScale = 10 Java HotSpot(TM) Server VM warning: increase O_BUFLEN
        in ostream.hpp -- output truncated
        {product}
            uintx AdaptiveSizePausePolicy = 0 Java HotSpot(TM) Server VM warning: increase O_BUFLEN
        in ostream.hpp -- output truncated
        {product}
            uintx AdaptiveSizePolicyCollectionCostMargin = 50 Java HotSpot(TM) Server VM warning: increase O_BUFLEN
        in ostream.hpp -- output truncated
        {product}

        Somehow we get a ostream buffer overflow printing each flag - though the buffer should be 2000 characters and so of ample size.

        Only affects fastdebug.

              Assignee:
              Zhengyu Gu
              Reporter:
              David Holmes
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: