8026300: VM warning: increase O_BUFLEN in ostream.hpp -- output truncated occurs with fastdebug VM when printing flags

Fixed wrong print string format

Reviewed-by: sla, ccheung